ISP20220689 - GarmentTest對應文字調整

--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -425,27 +425,27 @@
                                             {
                                                 KeyToFgwt = string.Empty;
                                             }
-                                            else if (Model.Shrinkages[i].Type == "a) length of front leg")
+                                            else if (Model.Shrinkages[i].Type == "a) Front rise")
                                             {
                                                 KeyToFgwt = "a)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "b) Length of side seam" || Model.Shrinkages[i].Type == "b) length of back leg")
+                                            else if (Model.Shrinkages[i].Type == "b) Length of side seam" || Model.Shrinkages[i].Type == "b) Back rise")
                                             {
                                                 KeyToFgwt = "b)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "c) Length of front" || Model.Shrinkages[i].Type == "c) length of inside leg")
+                                            else if (Model.Shrinkages[i].Type == "c) Length of front" || Model.Shrinkages[i].Type == "c) Inseam or crotch width (if inseam less then 3)")
                                             {
                                                 KeyToFgwt = "c)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "d) Length of center-back" || Model.Shrinkages[i].Type == "d) width at waist")
+                                            else if (Model.Shrinkages[i].Type == "d) Length of center-back" || Model.Shrinkages[i].Type == "d) Waistband width")
                                             {
                                                 KeyToFgwt = "d)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "e) length of underarm" || Model.Shrinkages[i].Type == "e) width at bottom of leg")
+                                            else if (Model.Shrinkages[i].Type == "e) length of underarm seam" || Model.Shrinkages[i].Type == "e) Leg opening")
                                             {
                                                 KeyToFgwt = "e)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "f) Across back width" || Model.Shrinkages[i].Type == "f) width of leg halfway")
+                                            else if (Model.Shrinkages[i].Type == "f) Across back width" || Model.Shrinkages[i].Type == "f) Knee width")
                                             {
                                                 KeyToFgwt = "f)";
                                             }
@@ -457,7 +457,7 @@
                                             {
                                                 KeyToFgwt = "g2)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "g) width of top of leg")
+                                            else if (Model.Shrinkages[i].Type == "g) Thigh width")
                                             {
                                                 KeyToFgwt = "g)";
                                             }
