ISP20220689 - 調整文字對應

--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -441,7 +441,7 @@
                                             {
                                                 KeyToFgwt = "d)";
                                             }
-                                            else if (Model.Shrinkages[i].Type == "e) length of underarm seam" || Model.Shrinkages[i].Type == "e) Leg opening")
+                                            else if (Model.Shrinkages[i].Type == "e) Length of underarm seam" || Model.Shrinkages[i].Type == "e) Leg opening")
                                             {
                                                 KeyToFgwt = "e)";
                                             }
