--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Index.cshtml
@@ -251,9 +251,9 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><h5>Special Mark</h5></td>
+                                <td><h5>Teamwear</h5></td>
                                 <td>
-                                    @Html.TextBoxFor(o => o.garmentTest.SpecialMark, "", new { @readonly = "readonly" })
+                                    @Html.TextBoxFor(o => o.garmentTest.Teamwear, "", new { @readonly = "readonly" })
                                 </td>
                                 <td><h5>Earliest Offline</h5></td>
                                 <td>
