--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Setting.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Setting.cshtml
@@ -143,8 +143,8 @@
                     <td>@Html.DropDownListFor(o => o.SewingLineID, Model.SewingLineList, null, new { @class = "form-control", @style = "width:157px" })</td>
                 </tr>
                 <tr>
-                    <td><label>QC in Charge</label></td>
-                    <td>@Html.DropDownListFor(o => o.QCInCharge, Model.QC_InChargeList, null, new { @class = "form-control", @style = "width:157px" })</td>
+                  @*  <td><label>QC in Charge</label></td>*@
+                   @* <td>@Html.DropDownListFor(o => o.QCInCharge, Model.QC_InChargeList, null, new { @class = "form-control", @style = "width:157px" })</td>*@
                 </tr>
 
             </table>
